// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: SearchResults when given a one result should render a correctly worded message 1`] = `
<ul
  className="SearchResults_1uxrx9c u-sm-flex u-sm-flexWrap"
>
  <li
    className="SearchResults_item_1mclqe7"
  >
    <a
      className="User_abw475 u-flex"
      href="/foo"
      onClick={[Function]}
    >
      <div
        className="User_wrapAvatar_3afm6b"
      >
        <div
          className="Image_e296pg"
          style={
            Object {
              "minHeight": 60,
            }
          }
        >
          <img
            alt="foo's avatar"
            className="Avatar_1pcpsid u-imgResponsive"
            onLoad={[Function]}
            src="avatar.jpg&s=180"
            width={90}
          />
          <svg />
        </div>
      </div>
      <p
        className="User_username_rnfkwd"
      >
        foo
      </p>
    </a>
  </li>
</ul>
`;

exports[`Component: SearchResults when given a set of results and entities should render them with a message 1`] = `
<ul
  className="SearchResults_1uxrx9c u-sm-flex u-sm-flexWrap"
>
  <li
    className="SearchResults_item_1mclqe7"
  >
    <a
      className="User_abw475 u-flex"
      href="/foo"
      onClick={[Function]}
    >
      <div
        className="User_wrapAvatar_3afm6b"
      >
        <div
          className="Image_e296pg"
          style={
            Object {
              "minHeight": 60,
            }
          }
        >
          <img
            alt="foo's avatar"
            className="Avatar_1pcpsid u-imgResponsive"
            onLoad={[Function]}
            src="avatar.jpg&s=180"
            width={90}
          />
          <svg />
        </div>
      </div>
      <p
        className="User_username_rnfkwd"
      >
        foo
      </p>
    </a>
  </li>
  <li
    className="SearchResults_item_1mclqe7"
  >
    <a
      className="User_abw475 u-flex"
      href="/foobar"
      onClick={[Function]}
    >
      <div
        className="User_wrapAvatar_3afm6b"
      >
        <div
          className="Image_e296pg"
          style={
            Object {
              "minHeight": 60,
            }
          }
        >
          <img
            alt="foobar's avatar"
            className="Avatar_1pcpsid u-imgResponsive"
            onLoad={[Function]}
            src="avatar.jpg&s=180"
            width={90}
          />
          <svg />
        </div>
      </div>
      <p
        className="User_username_rnfkwd"
      >
        foobar
      </p>
    </a>
  </li>
</ul>
`;

exports[`Component: SearchResults when the results are 0 should not render a message 1`] = `
<ul
  className="SearchResults_1uxrx9c u-sm-flex u-sm-flexWrap"
/>
`;
